--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "private": true,
   "devDependencies": {
-    "@antdevx/vite-plugin-hmr-sync": "^1.0.1",
+    "@antdevx/vite-plugin-hmr-sync": "^1.1.0",
     "@eslint/js": "^9.14.0",
     "@originjs/vite-plugin-federation": "^1.4.1",
-    "@quasar/app-vite": "^2.1.0",
+    "@quasar/app-vite": "^2.2.0",
     "@quasar/cli": "^2.5.0",
     "@types/node": "^20.5.9",
     "@vue/eslint-config-prettier": "^10.1.0",
@@ -22,13 +22,13 @@
     "prettier": "^3.3.3",
     "quasar": "^2.14.3",
     "typescript": "~5.5.3",
-    "vite": "^5.0.0",
+    "vite": "^6.3.1",
     "vite-plugin-checker": "^0.9.0",
     "vue": "^3.4.18",
     "vue-tsc": "^2.0.29"
   },
   "scripts": {
-    "run:remotes": "pnpm --filter \"./apps/todo-*\" watch:dev",
+    "run:remotes": "pnpm --filter \"./apps/todo-*\" build:watch",
     "run:host": "pnpm --filter \"./apps/gateway-manager\" dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
