--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,7 @@
 packages:
   - apps/**
   - shared
+
+overrides:
+  '@antdevx/vite-plugin-hmr-sync': link:../../../../AppData/Local/pnpm/global/5/node_modules/@antdevx/vite-plugin-hmr-sync
+  vite-plugin-hmr-sync@1.0.2: link:../../../../AppData/Local/pnpm/global/5/node_modules/@antdevx/vite-plugin-hmr-sync@1.0.2
